# personal-RAG

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli-reference.md  community.md  configuration.md  development.md  evaluation.md  faq.md  filtering.md  getting-started.md  large-vaults.md  roadmap.md
docs/assets/: DEMO.md
docs/assets/demo-sample/: notes.md  todo.txt
docs/releases/: v1.2.0.md  v1.2.0_github_release.md
docs/sources/: obsidian.md  telegram.md
scripts/: benchmark.py  run-demo-ui.sh  setup.sh
src/: __init__.py  cli.py  config.py  diagnostics.py  export.py  filters.py  ollama_client.py
src/core/: __init__.py  vault.py
src/embed/: __init__.py  embedder.py  presets.py
src/eval/: __init__.py  dataset.py  generate.py  metrics.py  runner.py
src/ingest/: __init__.py  chunking.py  ingest.py  metadata.py  pipeline.py  watcher.py
src/ingest/chunking/: __init__.py  char.py  context.py  strategies.py
src/ingest/parsers/: __init__.py  base.py  bookmarks.py  eml.py  ics.py  mbox.py  notion.py  obsidian.py  ocr.py  pinboard.py  raindrop.py  registry.py  telegram.py  whatsapp.py
src/retrieval/: __init__.py  hybrid.py  multi_query.py  parent.py  rerank.py  reranker_presets.py
src/store/: __init__.py  embedding_cache.py  file_cache.py  fts.py  vectorstore.py
src/ui/: app.py
src/ui/components/: export_ui.py  preview.py  results.py  session.py
tests/: conftest.py  test_bookmarks_parser.py  test_chunking.py  test_chunking_strategies.py  test_cli.py  test_config.py  test_eval.py  test_filters.py  test_hybrid.py  test_ingest.py  test_metadata.py  test_notion_parser.py  test_obsidian_parser.py  test_ollama_client.py  test_parsers.py  test_pipeline.py  test_presets.py  test_raindrop_pinboard.py  test_retrieval_advanced.py  test_telegram_parser.py  test_vectorstore.py  test_watcher.py  test_whatsapp_parser.py
tests/fixtures/: sample.eml  sample_bookmarks.html  sample_eval.jsonl  sample_notion.md  sample_pinboard.json  sample_raindrop.json  sample_whatsapp.txt
