[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personalragvault"
version = "1.1.0"
description = "Local-first personal RAG vault for your files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sean McDonnell" }]
keywords = ["rag", "chromadb", "ollama", "embeddings", "local-first", "privacy", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "sentence-transformers>=3.0.1,<4",
    "chromadb>=0.5.23,<1",
    "pypdf>=5.1.0,<6",
    "python-docx>=1.1.2,<2",
    "ollama>=0.4.7,<1",
    "typer>=0.15.1,<1",
    "rich>=13.9.4,<14",
    "watchdog>=4.0.0,<7",
    "numpy>=1.26.0,<3",
    "rank-bm25>=0.2.2,<1",
    "tomli>=2.0.1,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/seanebones-lang/personal-RAG"
Documentation = "https://github.com/seanebones-lang/personal-RAG/tree/main/docs"
Repository = "https://github.com/seanebones-lang/personal-RAG"
Issues = "https://github.com/seanebones-lang/personal-RAG/issues"
Changelog = "https://github.com/seanebones-lang/personal-RAG/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ui = [
    "streamlit>=1.40.0,<2",
]
ocr = [
    "pytesseract>=0.3.10,<1",
    "Pillow>=10.0.0,<11",
]
chunking = []
retrieval = []
dev = [
    "pytest>=8.3.0,<9",
    "pytest-mock>=3.14.0,<4",
    "ruff>=0.8.0,<1",
    "mypy>=1.13.0,<2",
]

[project.scripts]
personalragvault = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: downloads models or needs Ollama (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
